--- a/package.json
+++ b/package.json
@@ -1,23 +1,17 @@
 {
-  "dependencies": {
-    "node-sass": "^6.0.1"
-  },
-  "name": "portfolio",
+  "name": "modern_portfolio",
   "version": "1.0.0",
-  "description": "responsive portfolio website",
+  "description": "Responsive portfolio website",
   "main": "index.js",
-  "devDependencies": {},
+  "homepage": "https://bradtraversy.github.io/modern_portfolio",
   "scripts": {
-    "sass": "node-sass -w scss/ -o dist/css/ --recursive"
+    "sass": "node-sass -w scss/ -o dist/css/ --recursive",
+    "deploy": "gh-pages -d dist"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Sebastiangomezzz/portfolio.git"
-  },
-  "author": "sebastian gomez",
+  "author": "Brad Traversy",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Sebastiangomezzz/portfolio/issues"
-  },
-  "homepage": "https://github.com/Sebastiangomezzz/portfolio#readme"
+  "dependencies": {
+    "gh-pages": "^1.2.0",
+    "node-sass": "^4.13.1"
+  }
 }
